# violence-recognition-system

./: .gitignore  README.md  start.sh  stop.sh
ai-service/: README.md  endpoints.py  main.py  model_inference.py  movinet_finetuning.ipynb  movinet_finetuning_pytorch.ipynb  pattern_client.py  pyproject.toml  schemas.py  settings.py
ai-service/src/: app.py
ai-service/src/api/: __init__.py
ai-service/src/api/routes/: __init__.py  inference.py
ai-service/src/core/: __init__.py  settings.py
ai-service/src/schemas/: __init__.py  inference.py
ai-service/src/services/: __init__.py  model_inference.py  pattern_client.py
web-service/: README.md  mvnw  pom.xml  run.sh
web-service/api-gateway/: README.md  pom.xml
web-service/client/: README.md  package-lock.json  vite.config.ts
web-service/client/src/: App.tsx  index.css
web-service/client/src/components/: AppLayout.tsx  RouteGuards.tsx
web-service/client/src/context/: AuthContext.tsx  auth-context.ts  useAuth.ts
web-service/client/src/pages/: LoginPage.tsx  ManagerHomePage.tsx  PatternDetailPage.tsx  PatternFormPage.tsx  PatternManagementPage.tsx  RecognitionModelSelectionPage.tsx  RecognitionVideoSelectionPage.tsx  RegisterPage.tsx  StatisticsPage.tsx  UserHomePage.tsx  ViolenceRecognitionPage.tsx
web-service/client/src/services/: authApi.ts  http.ts  patternApi.ts  userApi.ts  (+1 more)
web-service/model-service/: README.md  pom.xml
web-service/pattern-service/: pom.xml
web-service/recognition-service/: README.md  pom.xml
web-service/user-service/: pom.xml
web-service/video-ingestion-service/: pom.xml
(+88 files in other folders)
