[project]
name = "ai-service"
version = "0.1.0"
description = "AI inference service for violence recognition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.116.0",
	"httpx>=0.28.0",
	"numpy>=2.2.0",
	"opencv-python-headless>=4.11.0.86",
	"pydantic>=2.11.0",
	"torch==2.6.0",
	"torchvision==0.21.0",
	"uvicorn>=0.35.0",
	"movinet-pytorch @ git+https://github.com/Atze00/MoViNet-pytorch.git",
]
